fix:bug where default card width does not correctly draw on mobile

--- a/src/components/DefaultCard/DefaultCard.css
+++ b/src/components/DefaultCard/DefaultCard.css
@@ -6,7 +6,7 @@
         min-width: 350px;
         max-width: 100%;
     }
-    @media (max-width: 99999px) {
+    @media (min-width: 481px) {
         min-width: 500px;
     }
 }
